fix style bug on Safari

--- a/src/sass/basic_mod.scss
+++ b/src/sass/basic_mod.scss
@@ -195,6 +195,7 @@ nav#top_nav {
 
     svg {
       height: 1.3rem;
+      width: 1.3rem;
       vertical-align: middle;
     }
   }
